tests/NormalTests/paczka1/small_fuzzy/78454989.err
Error in line 1: zLAim2ty A493 25,0
Error in line 8: S42 S795 88,1
